--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   @apply bg-gradient-to-br from-stone-900 to-slate-800;
 }
+img{
+  max-width: 100%;
+  width: 100%;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -18,4 +22,7 @@ code {
 }
 .btn {
   @apply py-2 px-8 bg-blue-500 text-white bg-transparent  border-blue-500 rounded hover:opacity-75 transition-all duration-300 ;
+}
+.heading{
+  @apply text-4xl font-bold text-white md:text-5xl xl:text-6xl;
 }
